# b4t

./: Dockerfile  docker-entrypoint.sh  pyproject.toml  pytest.ini
src/: settings.py  urls.py
src/apps/appointment/: models.py  urls.py
src/apps/appointment/migrations/: 0001_initial.py
src/apps/events/: nosql_models.py  serializers.py  urls.py  viewsets.py
src/apps/user/: admin.py  models.py  urls.py
src/apps/user/migrations/: 0001_initial.py
src/utils/: models.py
src/utils/dynamodb/: attributes.py  nosql_models.py  registry.py
src/utils/dynamodb/management/commands/: migrate_nosql.py
tests/: conftest.py
tests/apps/user/: test_viewsets.py
